# book-review

./: .gitignore  README.md  feature_info.yaml  pyproject.toml
notebooks/: 01_data_loading_and_preprocessing.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
src/: config.py  data_cleaning.py  data_engineering_pipeline.py  data_pipeline.py  data_processing.py  data_transformation.py  eda_plots.py  extract_books_info.py  extract_rating.py  feature_engineering.py  feature_pipeline.py  fine-tuning-script.py  finetuning.py  logger.py  ml_pipeline.py  ml_preparation_pipeline.py  model_test.py  paths.py  pipeline.py  plots.py  preprocessing.py  sentiment_analysis.py  utils.py
