[tool.poetry]
name = "book-review"
version = "0.1.0"
description = ""
authors = ["igor-personal <icaetanodiniz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.12.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
pandas = "^2.2.3"
plotly = "^5.24.1"
nltk = "^3.9.1"
transformers = "^4.46.2"
pyarrow = "^18.0.0"
numba = "^0.60.0"
metaflow = "^2.12.29"
pylint = "^3.3.1"
missingno = "^0.5.2"
wordcloud = "^1.9.4"
torch = "^2.5.1"
sentence-transformers = "^3.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
